Fix text-container to flexbox and add gap, add flexbox to cart-button

--- a/style.css
+++ b/style.css
@@ -49,9 +49,13 @@ body {
 }
 
 .text-container {
-  display: grid;
-  row-gap: 1rem;
-  padding: 1.2rem 1.8rem 1.5rem 1.8rem;
+  /* display: grid;
+  grid-template-rows: repeat(4, auto) 1fr;
+  row-gap: 1rem; */
+  padding: 1.8rem;
+  display: flex;
+  flex-direction:column;
+  gap: 2rem;
 }
 
 .category-text {
@@ -116,10 +120,10 @@ body {
   color: white;
   border-radius: 0.5rem;
   padding: 1rem;
-}
-
-.cart-svg {
-  margin-right: 0.6rem
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem
 }
 
 /* .attribution-footer {
@@ -135,7 +139,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     max-width: 37rem;
-    height: 29rem;
+    /* height: 29rem; */
   }
 
 }
